@@ -18,7 +18,7 @@ Description: Collection of utility functions for linear and mixed models
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Encoding: UTF-8
 Imports: stats, nlme, lattice, latticeExtra, lme4, magrittr, RColorBrewer, naniar, UpSetR
 Suggests: 
