@@ -210,6 +210,8 @@ export(lchol)
 export(lin_comb)
 export(llapply)
 export(long)
+export(lssvd)
+export(lssvd_old)
 export(lty)
 export(make.grid)
 export(map)
